# SocialBlog

./: .gitignore  Makefile  README.md  conftest.py  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  requirements.txt  settings_test.py
.github/workflows/: build.yml  workflow-pr.yml
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/serializers/: user_serializer.py
bookstore/: settings.py  urls.py  wsgi.py
frontend/: feed.html  index.html  perfil.html
frontend/static/css/: style.css
frontend/static/js/: api.js
order/: factories.py
order/models/: __init__.py
order/serializers/: __init__.py  order_serializers.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
posts/: models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
posts/serializers/: post_serializer.py
product/: factories.py  urls.py  views.py
product/models/: __init__.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/tests/: test_product.py  test_product_serializer.py  test_product_viewset.py  test_user.py
product/viewsets/: __init__.py  product_viewset.py
socialblog/: views.py  wsgi.py
socialblog/templates/: hello_world.html
staticfiles/css/: style.css
staticfiles/js/: api.js
